# pycode

./: README.md  main.py  makefile  pyproject.toml
pycode/: app.css  app.py  messages.py
pycode/services/: file_service.py  git_service.py
pycode/widgets/: command_panel.py  directory_tree.py  editor.py  terminal.py
